assets/css/main.css
body {
  margin: 0;
  min-width: 320px;
  min-height: 100vh;
  font-family: monospace;
}
#app {
  padding: 2rem;
  text-align: center;
}
/* Width */
::-webkit-scrollbar {
  width: 6px;
}

/* Track */
::-webkit-scrollbar-track {
  background: #f9f9f9; 
}

/* Handle */
::-webkit-scrollbar-thumb {
  background: #ccc; 
  border-radius: 4px;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: #aaa; 
}

img {
  image-rendering: pixelated;
}

